Simple fingerprint management system